--- a/src/styles.css
+++ b/src/styles.css
@@ -12,12 +12,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-
-  /*
-   * CSS image reference example.
-   */
-  background-image: url('./images/bg-pattern.png');
+  color: rgb(40, 40, 40);
 }
+
 .title {
   color: rgb(248, 118, 11);
   font-size: 32px;
@@ -44,4 +41,42 @@ body {
 .country-input:hover {
   outline: none;
   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3), 0 8px 30px 0 rgba(0, 0, 0, 0.3);
+}
+
+.pnotify-container {
+  border-radius: 50px;
+}
+
+.country_features_wrapper {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.country_feature {
+  font-weight: bold;
+  font-size: 24px;
+}
+.country_languages {
+  display: inline-block;
+  margin: auto;
+  padding-inline-start: 0px;
+}
+.flag_image_wrapper {
+  margin-left: 30px;
+  width: 40%;
+}
+.flag_image {
+  width: 100%;
+}
+.search-result {
+  padding-top: 30px;
+}
+
+.country_name_list {
+  display: inline-block;
+  margin: auto;
+  padding-inline-start: 0px;
+  text-align: left;
+  font-size: 24px;
+  font-weight: 500;
 }
