--- a/src/templates/oneCountry.hbs
+++ b/src/templates/oneCountry.hbs
@@ -1,12 +1,20 @@
 {{#each this}}
-<div class="country_card">
-    <article class="card">
-        <h2 class="country_name">{{name}}</h2>
-        <p>Capital {{capital}}</p>
-        <p>Population{{population}}</p>
-        <p>Languages</p>
-
-        <img src="{{flag}}" alt="Flag of {{name}}" class="flag_image" />
-    </article>
-</div>
+<article class="counntry_card">
+    <h2 class="country_name">{{name}}</h2>
+    <div class="country_features_wrapper">
+        <div>
+            <p><span class="country_feature">Capital: </span>{{capital}}</p>
+            <p><span class="country_feature">Population: </span>{{population}}</p>
+            <p><span class="country_feature">Languages:</span></p>
+            <ul class="country_languages">
+                {{#each this.languages}}
+                <li class="country_languages_item">{{name}}</li>
+                {{/each}}
+            </ul>
+        </div>
+        <div class="flag_image_wrapper">
+            <img src="{{flag}}" alt="Flag of {{name}}" class="flag_image" />
+        </div>
+    </div>
+</article>
 {{/each}}
