--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   color: rgb(40, 40, 40);
+  background-image: url('./images/bg-pattern.png');
 }
 
 .title {
