--- a/src/styles.css
+++ b/src/styles.css
@@ -76,8 +76,15 @@ body {
 .country_name_list {
   display: inline-block;
   margin: auto;
-  padding-inline-start: 0px;
+  /* padding-inline-start: 0px; */
+  padding-left: 80px;
+  padding-right: 80px;
   text-align: left;
   font-size: 24px;
   font-weight: 500;
+}
+
+.country_name_item_alt_spell {
+  font-size: 18px;
+  font-weight: normal;
 }
