--- a/src/templates/upToTenCountries.hbs
+++ b/src/templates/upToTenCountries.hbs
@@ -1,5 +1,6 @@
 <ul class="country_name_list">
     {{#each this}}
-    <li class="country_name_item">{{name}}</li>
+    <li class="country_name_item">{{name}} <span class="country_name_item_alt_spell">(Alternative spellings:
+            {{altSpellings}})</span></li>
     {{/each}}
 </ul>
