Errors catch notification added

--- a/src/templates/oneCountry.hbs
+++ b/src/templates/oneCountry.hbs
@@ -1,6 +1,7 @@
 {{#each this}}
 <article class="counntry_card">
     <h2 class="country_name">{{name}}</h2>
+    <p>(Alternative spellings: {{altSpellings}})</p>
     <div class="country_features_wrapper">
         <div>
             <p><span class="country_feature">Capital: </span>{{capital}}</p>
